Updates to HTML comands

--- a/Project/Style.css
+++ b/Project/Style.css
@@ -17,4 +17,12 @@ background-color:red;
 color:red;
 float:left;
 margin:auto;
+float:left;
+margin:auto;
+float:left;
+margin:auto;
 }
+
+.hzero{
+background-color:red;
+} 
