--- a/Example/style.css
+++ b/Example/style.css
@@ -1,1 +1,14 @@
 /*Css Code write with: [Py.Html]*/
+#menu ul li{
+background-color:red;
+float:left;
+padding:10px;
+
+}
+
+#menu ul li{
+background-color:red;
+float:left;
+padding:10px;
+
+}
