Template to site with components

--- a/Framework/Template/model01.html
+++ b/Framework/Template/model01.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-<!--if your can create one JS file for interactive actions for page-->
-    </head>
-    <body>
-        <menu></menu>
-        <slider></slider>
-        <article></article:>
-        <header></header>
-    </body>
+
+<head>
+	<!--if your can create one JS file for interactive actions for page-->
+	<title>[titleApp]</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	 crossorigin="anonymous">
+</head>
+
+<body>
+	<menu></menu>
+	<slider></slider>
+	<article>
+		<div class="card w-75">
+			<div class="card-body">
+				<h5 class="card-title">[TitleaDoc][0]</h5>
+				<p class="card-text">[Content][0]</p>
+				<a href="#" class="btn btn-primary">go</a>
+			</div>
+		</div>
+	</article>
+	<header></header>
+</body>
+
 </html>
