--- a/Framework/Components/slider.html
+++ b/Framework/Components/slider.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Slider</title>
-<link rel="stylesheet" type="text/css" href="css/slider.css"/>
-<meta name="viewport" content="width=device-width, user-scalable=no"/>
+	<meta charset="UTF-8">
+	<title>Slider</title>
+	<link rel="stylesheet" type="text/css" href="css/slider.css"/>
+	<meta name="viewport" content="width=device-width, user-scalable=no"/>
 </head>
-<body onload="slide1();">
-	<div id="slider">
-		<p><img src="images/slide1.jpg" alt="banner" id="banner"/></p>
+<body onload="startSlide();">
+
+	<div id="slider" slider-py>
+		<p><img src="images/slide1.jpg"/></p>
+		<p><img src="images/slide2.jpg"/></p>
+		<p><img src="images/slide3.jpg"/></p>
 	</div>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script type="text/javascript" src="js/slider.js"></script>
+	
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script type="text/javascript" src="js/slider.js"></script>
 
 </body>
 </html>
