update components system

--- a/Framework/Components/slider.base.html
+++ b/Framework/Components/slider.base.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html>
-	<head></head>
-	<body>
-		
+<head>
+	<meta charset="UTF-8">
+	<title>Slider</title>
+	<link rel="stylesheet" type="text/css" href="css/slider.css"/>
+	<meta name="viewport" content="width=device-width, user-scalable=no"/>
+</head>
+<body onload="startSlide();">
 
 	<div id="slider" slider-py>
 		<p><img src="images/slide1.jpg"/></p>
@@ -11,5 +16,6 @@
 	
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="js/slider.js"></script>
-	<script> onload="startSlide()";</script>	</body>
+
+</body>
 </html>
