--- a/Framework/Components/slider.html
+++ b/Framework/Components/slider.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Slider</title>
-	<link rel="stylesheet" type="text/css" href="css/slider.css"/>
-	<meta name="viewport" content="width=device-width, user-scalable=no"/>
-</head>
-<body onload="startSlide();">
 
 	<div id="slider" slider-py>
 		<p><img src="images/slide1.jpg"/></p>
@@ -16,6 +7,4 @@
 	
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="js/slider.js"></script>
-
-</body>
-</html>
+	<script> onload="startSlide()";</script>
