--- a/Framework/Components/nav.html
+++ b/Framework/Components/nav.html
@@ -1,9 +1,25 @@
-        <nav>
-            <ul class="navUl">
-                <li><a href="#">Element</a></li>
-                <li><a href="#">Element</a></li>
-                <li><a href="#">Element</a></li>
-                <li><a href="#">Element</a></li>
-            </ul>
-        </nav>
-        
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Menu</title>
+	<link rel="stylesheet" type="text/css" href="css/nav.css"/>
+	<meta name="viewport" content="width=device-width, user-scalable=no"/>
+</head>
+<body>
+	<nav id='menu'>
+		<ul>
+			<li>
+				<a href="#1">Menu 1</a>
+				<ul>
+					<li><a href="#11">Menu 1 - drop1</a></li>
+					<li><a href="#12">Menu 1 - drop2</a></li>
+				</ul>
+			</li>
+			<li><a href="#2">Menu 2</a></li>
+			<li><a href="#3">Menu 3</a></li>
+			<li><a href="#4">Menu 4</a></li>
+		</ul>
+	</nav>
+</body>
+</html>	
