--- a/Framework/Template/SandBox.html
+++ b/Framework/Template/SandBox.html
@@ -4,11 +4,12 @@
         <title>Py.html Sandbox</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
-        <link rel="stylesheet" href="C:\Users\Windows 8\Nova pasta\VsCode\Python\Py.Html-2\Framework\cssComponents\templates.css">
+        <link rel="stylesheet" href="Framework\cssComponents\templates.css">
         </head>
     <body>
         <div class="container-fluid sandbox">
             <h1>Hello Py.html</h1>
+            <h3>Welcome to interactive page creation</h3>
         </div>
         <body>
     </html>
