--- a/Framework/cssComponents/templates.css
+++ b/Framework/cssComponents/templates.css
@@ -10,3 +10,11 @@
     text-align: center;
     font-style: oblique;
 } 
+.sandbox h3{
+    position:fixed;
+    margin-top: 60vh;
+    margin-left: 60vh;
+    color:white;
+    text-align: center;
+    font-style: oblique;
+}
