--- a/Framework/cssComponents/templates.css
+++ b/Framework/cssComponents/templates.css
@@ -17,3 +17,12 @@
     text-align: center;
     font-style: oblique;
 }
+
+#box-animate{
+    position:fixed;
+    height: 200px;
+    width: 400px;
+    margin-top:40vh;
+    margin-left: 50vh;
+    background-color:white;
+}
