--- a/Framework/cssComponents/templates.css
+++ b/Framework/cssComponents/templates.css
@@ -17,6 +17,12 @@
     text-align: center;
     font-style: oblique;
 }
+.hid-element{
+    visibility: hidden;
+}
+.visi-element{
+    visibility: visible;
+}
 
 #box-animate{
     position:fixed;
