--- a/Framework/cssComponents/templates.css
+++ b/Framework/cssComponents/templates.css
@@ -1,3 +1,12 @@
+
+/*
+       STYLE FOR TEMPLATES
+    Styles or templates, define colors
+    postions and styles for divs and 
+    class, for its functions in templates.
+    colors: Clean,dark,white and green.
+*/
+
 .sandbox{
     background-color: blueviolet;
     height: 100vh;
