--- a/Framework/Template/SandBox.html
+++ b/Framework/Template/SandBox.html
@@ -4,8 +4,8 @@
         <title>Py.html Sandbox</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
-        <link rel="stylesheet" href="Framework\cssComponents\templates.css">
-        <link rel="stylesheet" href="Framework\cssComponents\animation.css">
+        <link rel="stylesheet" href="/Framework/cssComponents/templates.css">
+        <link rel="stylesheet" href="/Framework/cssComponents/animation.css">
         </head>
     <body>
 
@@ -38,9 +38,9 @@
             <div id="box-animate"></div>
             
 		</div>
-		<script src="Framework\Dynamic_\js\Physical.js"></script>
-    <script src="Framework\Dynamic_\js\Effects.js"></script>
-    <script src="Framework\Dynamic_\js\Controller.js"></script>
+		<script src="/Framework\Dynamic_/js/Physical.js"></script>
+    <script src="/Framework\Dynamic_/js/Effects.js"></script>
+    <script src="/Framework\Dynamic_/js/Controller.js"></script>
 		<script>
             //Exemple code for interactive system//
             opacityRepeat()
