--- a/Framework/cssComponents/templates.css
+++ b/Framework/cssComponents/templates.css
@@ -1,12 +1,3 @@
-
-/*
-       STYLE FOR TEMPLATES
-    Styles or templates, define colors
-    postions and styles for divs and 
-    class, for its functions in templates.
-    colors: Clean,dark,white and green.
-*/
-
 .sandbox{
     background-color: blueviolet;
     height: 100vh;
@@ -54,4 +45,14 @@
  }
  #menu.fadein{
        opacity: 1;
+ }
+ .sceneBox{
+     background-color:black;
+     color:white;
+     height:90vh;
+     width: auto;
+     margin: auto;
+     text-align: center;
+     font-size: 10vh;
+     font-family: Arial, Helvetica, sans-serif;
  }
