--- a/Framework/Template/SandBox.html
+++ b/Framework/Template/SandBox.html
@@ -43,7 +43,7 @@
     <script src="/Framework\Dynamic_/js/Controller.js"></script>
 		<script>
             //Exemple code for interactive system//
-            opacityRepeat()
+            //opacityRepeat()
             selectTarget("box-colider",3,20,20);
             //function for colider//
             function menuopen(){
